--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^25.0.10",
     "@types/react": "^19.2.9",
-    "autoprefixer": "^10.4.23",
     "next": "^16.1.4",
     "postcss": "^8.5.6",
     "react": "^19.2.3",
