--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 # Install dependencies first for better caching
 COPY package*.json ./
 
-RUN npm ci --only=production=false
+RUN npm ci
 
 # Copy source code
 COPY . .
