Ecosystem entegrasyonu: ArgoCD + StackGres + Gitea Actions
- k8s/, terraform/, .github/ silindi
- manifests/ eklendi: deployment, service, ingress, configmap,
  secret, networkpolicy, StackGres (sgcluster, sgpgconfig,
  sginstanceprofile)
- .gitea/workflows/ci.yaml: test -> build -> push -> rollout restart
- docker-compose.yml: fsdevops prefix, version/networks kaldirildi
- Makefile: k8s/terraform hedefleri yerine push hedefi
- CLAUDE.md, README.md: Ecosystem mimarisine guncellendi

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@
 *.pem
 *.key
 *.crt
-**/secret.yaml
-!**/secret.yaml.example
+manifests/secret.yaml
+!manifests/secret.yaml.example
 credentials.json
 secrets/
 
@@ -61,30 +61,6 @@ vendor/
 *.test
 *.out
 coverage.out
-
-# =========================
-# Terraform
-# =========================
-.terraform/
-.terraform.lock.hcl
-*.tfstate
-*.tfstate.*
-*.tfvars
-!*.tfvars.example
-crash.log
-override.tf
-override.tf.json
-*_override.tf
-*_override.tf.json
-kubeconfig
-terraform/local/kubeconfig
-
-# =========================
-# Kubernetes
-# =========================
-k8s/overlays/*/secret.yaml
-!k8s/overlays/*/secret.yaml.example
-kubeconfig*
 
 # =========================
 # Docker
