--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,52 +1,46 @@
-version: '3.8'
-
 services:
-  # PostgreSQL Database
+  # PostgreSQL Database (local dev)
   postgres:
     image: postgres:16-alpine
-    container_name: devops-journey-db
+    container_name: fsdevops-db
     restart: unless-stopped
     environment:
-      POSTGRES_USER: ${DB_USER:-postgres}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
-      POSTGRES_DB: ${DB_NAME:-devops_journey}
+      POSTGRES_USER: ${DB_USER:-fsdevops}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-<DB_PASSWORD>}
+      POSTGRES_DB: ${DB_NAME:-fsdevops}
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-devops_journey}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-fsdevops} -d ${DB_NAME:-fsdevops}"]
       interval: 10s
       timeout: 5s
       retries: 5
-    networks:
-      - devops-network
 
   # Go Backend API
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: devops-journey-backend
+    container_name: fsdevops-backend
     restart: unless-stopped
     environment:
       - ENVIRONMENT=${ENVIRONMENT:-development}
       - SERVER_PORT=8080
       - DB_HOST=postgres
       - DB_PORT=5432
-      - DB_USER=${DB_USER:-postgres}
-      - DB_PASSWORD=${DB_PASSWORD:-postgres}
-      - DB_NAME=${DB_NAME:-devops_journey}
+      - DB_USER=${DB_USER:-fsdevops}
+      - DB_PASSWORD=${DB_PASSWORD:-<DB_PASSWORD>}
+      - DB_NAME=${DB_NAME:-fsdevops}
       - DB_SSLMODE=disable
-      - JWT_SECRET=${JWT_SECRET:-change-this-in-production}
+      - JWT_SECRET=${JWT_SECRET:-<JWT_SECRET>}
       - ALLOW_ORIGINS=${ALLOW_ORIGINS:-http://localhost:3000}
     ports:
       - "8080:8080"
     depends_on:
       postgres:
         condition: service_healthy
-    networks:
-      - devops-network
 
   # Next.js Frontend
   frontend:
@@ -55,22 +49,13 @@ services:
       dockerfile: Dockerfile
       args:
         - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:8080}
-    container_name: devops-journey-frontend
+    container_name: fsdevops-frontend
     restart: unless-stopped
-    environment:
-      - NODE_ENV=${NODE_ENV:-development}
-      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:8080}
     ports:
       - "3000:3000"
     depends_on:
       - backend
-    networks:
-      - devops-network
 
 volumes:
   postgres_data:
     driver: local
-
-networks:
-  devops-network:
-    driver: bridge
