--- a/manifests/sgcluster.yaml
+++ b/manifests/sgcluster.yaml
@@ -2,6 +2,8 @@ apiVersion: stackgres.io/v1
 kind: SGScript
 metadata:
   name: fsdevops-db-init
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
   labels:
     app.kubernetes.io/part-of: fsdevops-portfolio
     app.kubernetes.io/component: database
