--- a/manifests/sgpgconfig.yaml
+++ b/manifests/sgpgconfig.yaml
@@ -2,6 +2,8 @@ apiVersion: stackgres.io/v1
 kind: SGPostgresConfig
 metadata:
   name: fsdevops-db-pgconfig
+  annotations:
+    argocd.argoproj.io/sync-wave: "-2"
   labels:
     app.kubernetes.io/part-of: fsdevops-portfolio
     app.kubernetes.io/component: database
