--- a/manifests/sginstanceprofile.yaml
+++ b/manifests/sginstanceprofile.yaml
@@ -42,3 +42,38 @@ spec:
     cluster-reconciliation-cycle:
       cpu: "32m"
       memory: "64Mi"
+  requests:
+    cpu: "100m"
+    memory: "256Mi"
+    containers:
+      cluster-controller:
+        cpu: "32m"
+        memory: "64Mi"
+      envoy:
+        cpu: "32m"
+        memory: "64Mi"
+      pgbouncer:
+        cpu: "32m"
+        memory: "64Mi"
+      prometheus-postgres-exporter:
+        cpu: "10m"
+        memory: "64Mi"
+      postgres-util:
+        cpu: "10m"
+        memory: "64Mi"
+    initContainers:
+      setup-arbitrary-user:
+        cpu: "32m"
+        memory: "64Mi"
+      setup-scripts:
+        cpu: "32m"
+        memory: "64Mi"
+      relocate-binaries:
+        cpu: "100m"
+        memory: "64Mi"
+      pgbouncer-auth-file:
+        cpu: "32m"
+        memory: "64Mi"
+      cluster-reconciliation-cycle:
+        cpu: "32m"
+        memory: "64Mi"
