ClusterIssuer ve SGScript düzeltmesi
- ingress.yaml: letsencrypt-cloudflare → letsencrypt-cloudflare-azize (azize zone erişimi)
- sgcluster.yaml: \c psql meta-komutu SGScript'te çalışmaz, ayrı script entry ile database parametresi kullanıldı
- CREATE USER/DATABASE idempotent hale getirildi (IF NOT EXISTS)

--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/part-of: fsdevops-portfolio
     app.kubernetes.io/component: ingress
   annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
+    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-azize
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/proxy-body-size: "10m"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
