--- a/.gitea/workflows/ci.yaml
+++ b/.gitea/workflows/ci.yaml
@@ -43,32 +43,32 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install Docker CLI
+        run: |
+          apt-get update && apt-get install -y docker.io
+
       - name: Login to Gitea Registry
-        uses: docker/login-action@v3
-        with:
-          registry: gitea.azizedursun.com
-          username: ${{ secrets.REGISTRY_USER }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+        run: |
+          echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login gitea.azizedursun.com -u "${{ secrets.REGISTRY_USER }}" --password-stdin
 
       - name: Build and push backend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          push: true
-          tags: |
-            gitea.azizedursun.com/azize-projects/fsdevops-backend:${{ github.sha }}
-            gitea.azizedursun.com/azize-projects/fsdevops-backend:latest
+        run: |
+          SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
+          docker build -t gitea.azizedursun.com/azize-projects/fsdevops-backend:${SHORT_SHA} \
+                       -t gitea.azizedursun.com/azize-projects/fsdevops-backend:latest \
+                       ./backend
+          docker push gitea.azizedursun.com/azize-projects/fsdevops-backend:${SHORT_SHA}
+          docker push gitea.azizedursun.com/azize-projects/fsdevops-backend:latest
 
       - name: Build and push frontend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend
-          push: true
-          build-args: |
-            NEXT_PUBLIC_API_URL=https://api.devops.azizedursun.com
-          tags: |
-            gitea.azizedursun.com/azize-projects/fsdevops-frontend:${{ github.sha }}
-            gitea.azizedursun.com/azize-projects/fsdevops-frontend:latest
+        run: |
+          SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
+          docker build --build-arg NEXT_PUBLIC_API_URL=https://api.devops.azizedursun.com \
+                       -t gitea.azizedursun.com/azize-projects/fsdevops-frontend:${SHORT_SHA} \
+                       -t gitea.azizedursun.com/azize-projects/fsdevops-frontend:latest \
+                       ./frontend
+          docker push gitea.azizedursun.com/azize-projects/fsdevops-frontend:${SHORT_SHA}
+          docker push gitea.azizedursun.com/azize-projects/fsdevops-frontend:latest
 
   update-manifests:
     needs: build-and-push
