CI: Docker socket mount ile DinD erisimi (soket paylasimlı volume)

--- a/.gitea/workflows/ci.yaml
+++ b/.gitea/workflows/ci.yaml
@@ -41,22 +41,22 @@ jobs:
       - name: Install Docker CLI and set DOCKER_HOST
         run: |
           curl -fsSL https://download.docker.com/linux/static/stable/x86_64/docker-27.4.1.tgz | tar xz --strip-components=1 -C /usr/local/bin docker/docker
-          echo "DOCKER_HOST=tcp://localhost:2375" >> $GITHUB_ENV
+          echo "DOCKER_HOST=unix:///var/run/docker.sock" >> $GITHUB_ENV
 
       - name: Verify Docker connection
         run: |
-          export DOCKER_HOST=tcp://localhost:2375
+          export DOCKER_HOST=unix:///var/run/docker.sock
           docker version
           docker info --format '{{.ServerVersion}}'
 
       - name: Login to Gitea Registry
         run: |
-          export DOCKER_HOST=tcp://localhost:2375
+          export DOCKER_HOST=unix:///var/run/docker.sock
           echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login gitea.azizedursun.com -u "${{ secrets.REGISTRY_USER }}" --password-stdin
 
       - name: Build and push backend
         run: |
-          export DOCKER_HOST=tcp://localhost:2375
+          export DOCKER_HOST=unix:///var/run/docker.sock
           SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
           docker build -t gitea.azizedursun.com/azize-projects/fsdevops-backend:${SHORT_SHA} \
                        -t gitea.azizedursun.com/azize-projects/fsdevops-backend:latest \
@@ -66,7 +66,7 @@ jobs:
 
       - name: Build and push frontend
         run: |
-          export DOCKER_HOST=tcp://localhost:2375
+          export DOCKER_HOST=unix:///var/run/docker.sock
           SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
           docker build --build-arg NEXT_PUBLIC_API_URL=https://api.devops.azizedursun.com \
                        -t gitea.azizedursun.com/azize-projects/fsdevops-frontend:${SHORT_SHA} \
