--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,5 +28,10 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "eslint": "^9.27.0",
+    "eslint-config-next": "^16.1.4",
+    "@eslint/eslintrc": "^3.3.1"
   }
 }
