--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,6 @@
   },
   "devDependencies": {
     "eslint": "^9.27.0",
-    "eslint-config-next": "^16.1.4",
-    "@eslint/eslintrc": "^3.3.1"
+    "eslint-config-next": "^16.1.4"
   }
 }
