--- a/.gitea/workflows/ci.yaml
+++ b/.gitea/workflows/ci.yaml
@@ -94,3 +94,4 @@ jobs:
           git diff --cached --quiet && echo "Manifest zaten guncel, degisiklik yok" && exit 0
           git commit -m "ci: image tag guncelle ($(echo ${{ github.sha }} | cut -c1-7))"
           git push origin main
+# docker wait fix: wget health check
